# haystack-entailment-checker

./: README.md  pyproject.toml
.github/workflows/: pypi_release.yml
haystack_entailment_checker/: __init__.py  entailment_checker.py
